# UpTrader_test_task

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py
